--- a/cubic/style.css
+++ b/cubic/style.css
@@ -130,7 +130,7 @@ button,
 input,
 select,
 textarea {
-	font-family: 'Playfair Display', serif;
+	font-family: Montserrat, 'Playfair Display', serif;
 }
 h1,
 h2,
